add a nice dirty compiler
this can replace a manual build step in a lot of cases. probably
all my use cases at least

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jade": "*",
     "less-middleware": "*",
     "connect": "~2.7.10",
-    "commander": "1.1.1"
+    "commander": "1.1.1",
+    "cheerio": "0.11.0"
   },
   "bin": {
     "serve": "./bin/serve"
