--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serve",
-  "version": "1.2.4",
+  "version": "1.3.2",
   "description": "Simple command-line file / directory server built with connect",
   "keywords": [
     "static",
@@ -14,9 +14,7 @@
     "less-middleware": "*",
     "connect": "~2.7.10",
     "commander": "1.1.1",
-    "cheerio": "0.11.0",
-    "sourcegraph": "~0.8.0",
-    "bigfile": "~0.5.3"
+    "serve-js": "~0.1.1"
   },
   "bin": {
     "serve": "./bin/serve"
