--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serve",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "description": "Simple command-line file / directory server built with connect",
   "keywords": [
     "static",
@@ -9,13 +9,14 @@
   ],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "dependencies": {
-    "stylus": "*",
     "jade": "*",
-    "less-middleware": "*",
-    "connect": "~2.8.4",
+    "stylus": "*",
+    "opener": "~1.3.0",
+    "connect": "~2.8.6",
     "commander": "2.0.0",
     "serve-js": "~0.3.3",
-    "markdown-middleware": "~0.1.0"
+    "less-middleware": "*",
+    "markdown-middleware": "~0.1.3"
   },
   "bin": {
     "serve": "./bin/serve"
