--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
   "name": "serve",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Simple command-line file / directory server built with connect",
-  "keywords": [
-    "static",
-    "server",
-    "connect"
-  ],
+  "keywords": ["static", "server", "connect"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "bin": {"serve": "./bin/serve"},
   "dependencies": {
-    "jade": "*",
-    "stylus": "*",
-    "opener": "~1.3.0",
-    "connect": "~2.8.8",
-    "commander": "2.0.0",
-    "serve-js": "0.4.1",
+    "markdown-middleware": "*",
     "less-middleware": "*",
-    "markdown-middleware": "*"
-  },
-  "bin": {
-    "serve": "./bin/serve"
+    "commander": "~2.1.0",
+    "connect": "~2.12.0",
+    "serve-js": "0.4.4",
+    "stylus": "*",
+    "opener": "*",
+    "jade": "*"
   }
 }
