--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serve",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "description": "Simple command-line file / directory server built with connect",
   "keywords": ["static", "server", "connect"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
@@ -8,9 +8,9 @@
   "dependencies": {
     "markdown-middleware": "*",
     "less-middleware": "*",
-    "commander": "~2.1.0",
-    "connect": "~2.12.0",
-    "serve-js": "0.5.0",
+    "commander": "^2.2.0",
+    "connect": "^2.13.0",
+    "serve-js": "^0.5.2",
     "stylus": "*",
     "opener": "*",
     "jade": "*"
