remove --harmony flag

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serve",
-  "version": "1.6.5",
+  "version": "1.6.6",
   "description": "Simple command-line file / directory server built with connect",
   "keywords": ["static", "server", "connect"],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
@@ -10,11 +10,11 @@
     "less-middleware": "*",
     "serve-favicon": "*",
     "serve-static": "*",
-    "connect": "^3.0.0",
     "errorhandler": "*",
     "serve-index": "*",
     "commander": "*",
     "serve-js": "*",
+    "connect": "3",
     "morgan": "*",
     "stylus": "*",
     "opener": "*",
