--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "serve",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "description": "Simple command-line file / directory server built with connect",
   "keywords": ["static", "server", "connect"],
-  "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "repository": "jkroso/serve",
+  "license": "MIT",
+  "author": "Jake Rosoman",
   "bin": {"serve": "./bin/serve"},
   "dependencies": {
+    "result-type": "*",
     "markdown-middleware": "*",
     "less-middleware": "*",
     "serve-favicon": "*",
